--- a/ProjetoCadastroDelphi.dproj
+++ b/ProjetoCadastroDelphi.dproj
@@ -124,6 +124,9 @@
             <FormType>dfm</FormType>
             <DesignClass>TFrame</DesignClass>
         </DCCReference>
+        <DCCReference Include="Geral\Geral.Conexao.pas"/>
+        <DCCReference Include="Servicos\Curso.Classe.pas"/>
+        <DCCReference Include="Servicos\Curso.DAO.pas"/>
         <BuildConfiguration Include="Release">
             <Key>Cfg_2</Key>
             <CfgParent>Base</CfgParent>
